# av_repo

./: main.cc
CaptureAndEncode/: CaptureAndEncode.sln  Note.md
CaptureAndEncode/CaptureAndEncode/: CaptureAndEncode.vcxproj  CaptureAndEncode.vcxproj.filters  DesktopDuplication.cc  DesktopDuplication.h  DesktopProcessor.cc  DesktopProcessor.h  DragonVideo.cc  DragonVideo.h  FpsController.cc  FpsController.h  FrameData.h  NvEncZeroLatency.cc  NvEncZeroLatency.h  NvEncoder.cpp  NvEncoder.h  NvEncoderCuda.cpp  NvEncoderCuda.h  NvidiaEncoder.cc  NvidiaEncoder.h  VideoCapture.cc  VideoCapture.h  VideoEncoder.cc  VideoEncoder.h  main.cpp
WebRTC_Native_Demo/: WebRTC_Native_Demo.sln  WebRTC_Native_Demo.vcxproj  WebRTC_Native_Demo.vcxproj.filters  main.cpp  vcm_capturer_test.cpp  vcm_capturer_test.h  video_capturer_test.cpp  video_capturer_test.h
ffmpegUtils/rtspSavePic/: Makefile  devlist.txt
ffmpegUtils/rtspSavePic/include/: httpget.h
ffmpegUtils/rtspSavePic/src/: main.cpp
ffmpegUtils/rtspSavePic/src/rtsp流有时效性/: main.cpp
ffmpegUtils/rtspSaveVideo/: CMakeLists.txt  main.cpp
